Update API and implementation to use new dcc table and dcc.id. Closes #27.
